# bazel

./: BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod
cmd/: BUILD.bazel  main.go
pkg/: BUILD.bazel  service.go
pkg/util/: BUILD.bazel  util.go
