load("@gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    args = [
        # "-go_naming_onvention=import",
        # "-go_naming_convention_external=import",
    ],
    visibility = ["//visibility:public"],
)

load("@rules_oci//oci:defs.bzl", "oci_push")

# remote_tags need change
oci_push(
    name = "test",
    image = "//cmd:test_image",
    repository = "harbor.dh3.ai/kubevirt/test",
    remote_tags = ["latest"],
)
