bazel_dep(name = "gazelle", version = "0.35.0")

# local_path_override(
#     module_name = "gazelle",
#     path = "/Users/spenner/src/bazelbuild/bazel-gazelle",
# )

bazel_dep(name = "rules_go", version = "0.44.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_gin_gonic_gin", "com_github_sirupsen_logrus")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_oci", version = "1.6.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:77906da86b60585ce12215807090eb327e7386c8fafb5402369e421f44eff17e",
    image = "docker.io/library/ubuntu",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_base")
