load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/zhaoxuat/bazel/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "test_layer",
    srcs = [":cmd"],
)

load("@rules_oci//oci:defs.bzl", "oci_image")

oci_image(
    name = "test_image",
    base = "@distroless_base",
    entrypoint = ["/cmd"],
    tars = [":test_layer"],
    visibility = ["//visibility:public"],
    workdir = "/app",
)